cmake_minimum_required(VERSION 2.8.3)

#  add_subdirectory(xsens_cpp)
#  add_subdirectory(pcl_tutorials/cloud_viewer)
#  add_subdirectory(pcl_tutorials/kdtree_search)
#  add_subdirectory(pcl_tutorials/point_cloud_compression)
#  add_subdirectory(pcl_tutorials/range_image_border_extraction)
#  add_subdirectory(pcl_tutorials/cylinder_segmentation)
#  add_subdirectory(pcl_tutorials/cluster_extraction)
#  add_subdirectory(dlg_segmentation)   
#  add_subdirectory(pcl_tutorials/planar_segmentation)
add_subdirectory(spherefit)
add_subdirectory(pose_estimation)